@@ -21,7 +21,8 @@
         <jackson-bom.version>2.20.0</jackson-bom.version>
         <version.eclipse.microprofile.config>3.0.3</version.eclipse.microprofile.config>
         <version.io.smallrye.jandex>3.5.0</version.io.smallrye.jandex>
-        <version.io.smallrye.smallrye-config>3.10.2</version.io.smallrye.smallrye-config>
+        <version.io.smallrye.smallrye-config>3.14.0</version.io.smallrye.smallrye-config>
+        <version.io.smallrye.smallrye-common-classloader>2.13.9</version.io.smallrye.smallrye-common-classloader>
         <version.eclipse.microprofile.openapi>4.1</version.eclipse.microprofile.openapi>
         <version.org.hamcrest>1.3</version.org.hamcrest>
         <version.org.hamcrest.java-hamcrest>2.0.0.0</version.org.hamcrest.java-hamcrest>
@@ -32,9 +33,7 @@
         <version.testng>7.11.0</version.testng>
         <version.arquillian.jetty>2.0.0.Final</version.arquillian.jetty>
         <version.jetty>11.0.24</version.jetty>
-
-        <!-- Use Jakarta EE 10 versions -->
-        <version.resteasy>6.2.3.Final</version.resteasy>
+        <version.resteasy>7.0.0.Final</version.resteasy>
         <version.weld.core>5.1.2.Final</version.weld.core>
 
         <!--
@@ -129,7 +128,7 @@
             <dependency>
                 <groupId>io.smallrye.common</groupId>
                 <artifactId>smallrye-common-classloader</artifactId>
-                <version>2.8.0</version>
+                <version>${version.io.smallrye.smallrye-common-classloader}</version>
             </dependency>
             <dependency>
                 <groupId>io.smallrye.config</groupId>
@@ -370,24 +369,6 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.asciidoctor</groupId>
-                    <artifactId>asciidoctor-maven-plugin</artifactId>
-                    <configuration>
-                        <sourceHighlighter>coderay</sourceHighlighter>
-                        <attributes>
-                            <icons>font</icons>
-                            <pagenums />
-                            <version>${project.version}</version>
-                            <idprefix />
-                            <idseparator>-</idseparator>
-                            <allow-uri-read>true</allow-uri-read>
-                            <revnumber>${project.version}</revnumber>
-                            <revdate>${maven.build.timestamp}</revdate>
-                            <organization>${project.organization.name}</organization>
-                        </attributes>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>${version.buildhelper.plugin}</version>
@@ -428,7 +409,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>${version.maven-resources-plugin}</version>
             </plugin>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
@@ -452,9 +432,23 @@
         </profile>
 
         <profile>
-            <id>jdk11plus</id>
+            <id>jdk11</id>
             <activation>
-                <jdk>[11,)</jdk>
+                <jdk>[11,17)</jdk>
+            </activation>
+            <properties>
+                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
+                <maven.compiler.release>11</maven.compiler.release>
+                <version.io.smallrye.smallrye-common-classloader>2.8.0</version.io.smallrye.smallrye-common-classloader>
+                <version.io.smallrye.smallrye-config>3.10.2</version.io.smallrye.smallrye-config>
+                <version.resteasy>6.2.3.Final</version.resteasy>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>jdk17plus</id>
+            <activation>
+                <jdk>[17,)</jdk>
             </activation>
             <properties>
                 <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
